# Parallel_laba-1

./: CMakeLists.txt  task1_matrix.cpp  task2_bank.cpp
